manifests/pipeline/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: pipeline
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 8000
      targetPort: http
