manifests/pipeline/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: pipeline
  labels:
    app: api
spec:
  ingressClassName: traefik
  rules:
    - host: api.yn-tech.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
